# learn-opengl

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py
cmake/: create_executable.cmake  imgui.cmake
common/: CMakeLists.txt
common/include/common/old/: camera.hpp  cube.hpp  plane.hpp  scope_time_logger.hpp  shader.hpp  stringified_enum.hpp  texture.hpp  window_manager.hpp
common/include/common/util/: assets_path.hpp
common/src/old/: window.cpp  window_manager.cpp
common/src/util/: assets_path.cpp
common/util/: assets_path.cpp
experiments/multi_context_opengl/: CMakeLists.txt
experiments/multi_context_opengl/assets/shader/: shader.vert
experiments/multi_context_opengl/include/: camera.hpp  cube.hpp  shader.hpp  texture.hpp  window.hpp  window_manager.hpp
experiments/multi_context_opengl/src/: main.cpp  window.cpp  window_manager.cpp
main/1_getting_started/1.0_introduction/: notes.md
main/1_getting_started/1.1_hello_window/: notes.md
main/1_getting_started/1.1_hello_window/code/: CMakeLists.txt  CMakeUserPresets.json  main.cpp
main/1_getting_started/1.1_hello_window/code/lib/: glad
main/1_getting_started/1.2_hello_triangle/: notes.md
main/1_getting_started/1.2_hello_triangle/code/: CMakeLists.txt  CMakeUserPresets.json  main.cpp
main/1_getting_started/1.3_shaders/: notes.md
main/1_getting_started/1.3_shaders/code/: CMakeLists.txt  CMakeUserPresets.json  app.hpp  app_with_shader_class.hpp  conanfile.py  main.cpp  shader.hpp
main/1_getting_started/1.3_shaders/code/assets/shader/: shader.frag  shader.vert
main/1_getting_started/1.4_textures/: notes.md
main/1_getting_started/1.4_textures/code/: CMakeLists.txt  CMakeUserPresets.json  app.hpp  app_with_texture_unit.hpp  conanfile.py  main.cpp
main/1_getting_started/1.5_transformations/: notes.md
main/1_getting_started/1.5_transformations/code/: CMakeLists.txt  CMakeUserPresets.json  app.hpp
main/1_getting_started/1.6_coordinate_systems/: notes.md
main/1_getting_started/1.6_coordinate_systems/code/: CMakeLists.txt  CMakeUserPresets.json  app.hpp
main/1_getting_started/1.7_camera/: notes.md
main/1_getting_started/1.7_camera/code/: CMakeLists.txt  CMakeUserPresets.json  app.hpp  app_with_camera_header.hpp  main.cpp
main/1_getting_started/1.7_camera/code/include/: shader.hpp
main/2_lighting/2.1_colors/: notes.md
main/2_lighting/2.1_colors/code/: CMakeLists.txt  CMakeUserPresets.json  app.hpp
main/2_lighting/2.1_colors/code/lib/: glbinding
main/2_lighting/2.2_basic_lighting/: notes.md
main/2_lighting/2.2_basic_lighting/code/: CMakeLists.txt  CMakeUserPresets.json  app.hpp  conanfile.py
main/2_lighting/2.3_material/: notes.md
main/2_lighting/2.3_material/code/: CMakeLists.txt  CMakeUserPresets.json
main/2_lighting/2.3_material/code/assets/shader/: shader.frag
main/2_lighting/2.3_material/code/include/: app.hpp  app_various_materials.hpp  material.hpp  texture.hpp
main/2_lighting/2.3_material/code/src/: main.cpp
main/2_lighting/2.4_lighting_maps/: notes.md
main/2_lighting/2.4_lighting_maps/code/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
main/2_lighting/2.4_lighting_maps/code/include/: app.hpp
main/2_lighting/2.4_lighting_maps/code/src/: main.cpp
main/2_lighting/2.5_light_casters/: notes.md
main/2_lighting/2.5_light_casters/code/: CMakeLists.txt  CMakeUserPresets.json
main/2_lighting/2.5_light_casters/code/assets/shader/: light_shader.frag  shader.frag
main/2_lighting/2.5_light_casters/code/include/: app.hpp  imgui_layer.hpp  scene.hpp  window.hpp
main/2_lighting/2.5_light_casters/code/lib/: imgui
main/2_lighting/2.5_light_casters/code/src/: main.cpp
main/2_lighting/2.6_multiple_lights/: notes.md
main/2_lighting/2.6_multiple_lights/code/: CMakeLists.txt  CMakeUserPresets.json
main/2_lighting/2.6_multiple_lights/code/include/: app.hpp  imgui_layer.hpp  scene.hpp
main/3_model_loading/3.0_assimp/: notes.md
main/3_model_loading/3.1_mesh/: mesh.hpp  notes.md
main/3_model_loading/3.2_model/: model.hpp
main/3_model_loading/3.x_using_it/code/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
main/3_model_loading/3.x_using_it/code/include/: app.hpp  imgui_layer.hpp  mesh.hpp  model.hpp  scene.hpp
main/4_advanced_opengl/4.01_depth_testing/: notes.md
main/4_advanced_opengl/4.01_depth_testing/code/: CMakeLists.txt  CMakeUserPresets.json
main/4_advanced_opengl/4.02_stencil_testing/: notes.md
main/4_advanced_opengl/4.02_stencil_testing/code/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
main/4_advanced_opengl/4.03_blending/: notes.md
main/4_advanced_opengl/4.03_blending/code/: CMakeLists.txt  CMakeUserPresets.json
main/4_advanced_opengl/4.04_face_culling/: notes.md
main/4_advanced_opengl/4.04_face_culling/code/: CMakeLists.txt  CMakeUserPresets.json
main/4_advanced_opengl/4.05_framebuffers/: notes.md
main/4_advanced_opengl/4.05_framebuffers/code/: CMakeLists.txt  CMakeUserPresets.json
main/4_advanced_opengl/4.06_cubemaps/: notes.md
main/4_advanced_opengl/4.06_cubemaps/code/: CMakeLists.txt  CMakeUserPresets.json
main/4_advanced_opengl/4.06_cubemaps/code/assets/shader/: ndc_shader.frag  ndc_shader.vert  reflection.frag  refraction.frag  shader.frag  skybox.frag  skybox.vert
main/4_advanced_opengl/4.06_cubemaps/code/assets/texture/: skybox
main/4_advanced_opengl/4.06_cubemaps/code/include/: app.hpp  cubemap.hpp  framebuffer.hpp  image_texture.hpp  imgui_layer.hpp  scene.hpp  scene2.hpp  stringified_enum.hpp
main/4_advanced_opengl/4.06_cubemaps/code/src/: window.cpp
main/4_advanced_opengl/4.07_advanced_data/: notes.md
main/4_advanced_opengl/4.08_advanced_glsl/: notes.md
main/4_advanced_opengl/4.08_advanced_glsl/code/: CMakeLists.txt
resources/headers/: camera.hpp  shader.hpp
resources/lib/glad/: CMakeLists.txt
resources/lib/glad/src/: glad.c
resources/sources/: cube.hpp  cubemap.hpp  framebuffer.hpp  image_texture.hpp  plane.hpp  scope_time_logger.hpp  shader.hpp  stringified_enum.hpp  texture.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
(+48 files in other folders)
